Fixed the linkdin link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             inovação.</p>
         <div class="links">
             <a href="https://github.com/selrahcsan" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/selrahcsan" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/charlesstna" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:charlesstna@disroot.org"><i class="fas fa-envelope"></i></a>
         </div>
         <a href="https://selrahcsan.github.io/selrahcsan/" class="btn">Portifólio</a>
